add export functionality, updated_at fields

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
     "sourceMap": true,
 
     "strictNullChecks": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["src/*"]
+    }
   },
 
   "include": ["src/**/*.ts", "test/**/*.ts"]
