--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "forager",
   "version": "0.1.1",
   "description": "",
-  "main": "index.js",
+  "type": "commonjs",
+  "main": "src/index.js",
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
@@ -14,7 +15,7 @@
   "author": "Andrew Kaiser",
   "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^7.4.1",
+    "better-sqlite3": "^7.4.3",
     "sharp": "^0.28.3"
   },
   "devDependencies": {
