--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.1",
   "description": "",
   "type": "commonjs",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp package.json build/src",
+    "build:watch": "mkdir -p build/src && cp package.json build/src && tsc --watch",
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "tsc --noEmit --watch",
     "test:migrations": "ava test/**/*test.ts",
@@ -16,7 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "better-sqlite3": "^7.4.3",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "zod": "^3.8.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^5.4.3",
