--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "declarationMap": true,
 
     "strictNullChecks": true,
+    "strict": true,
     "noImplicitAny": true,
     "baseUrl": ".",
     "paths": {
