--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forager",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "",
   "type": "commonjs",
   "main": "index.js",
@@ -30,9 +30,15 @@
     "@types/mocha": "^8.2.3",
     "@types/node": "^15.14.2",
     "@types/sharp": "^0.28.5",
+    "@types/tap": "^15.0.5",
+    "@types/tape": "^4.13.2",
     "ava": "^3.15.0",
+    "jest": "^27.2.4",
     "mocha": "^8.4.0",
     "source-map-support": "^0.5.19",
+    "tap": "^15.0.10",
+    "tape": "^5.3.1",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
