debug info on bad thumbnail creation, fix sort_by

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 
     "strictNullChecks": true,
     "strict": true,
+    "useUnknownInCatchVariables": false,
     "noImplicitAny": true,
     "baseUrl": ".",
     "paths": {
