--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.5.0",
   "description": "",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "src/index.js",
   "bin": {
-    "forager": "cli.js"
+    "forager": "src/cli.js"
   },
   "scripts": {
-    "build": "tsc && cp package.json build/src",
+    "build": "cp package.json build/src && sed -i.bak 's/..\\/..\\/package.json/..\\/package.json/' build/src/db/sqlite.js",
+    "build": "tsc",
     "build:watch": "mkdir -p build/src && cp package.json build/src && tsc --watch",
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "tsc --noEmit --watch",
