--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,5 +2,7 @@
   "tasks": {
     "test":       "deno test --check --unstable --allow-read --allow-write --allow-env --allow-ffi         test/",
     "test:watch": "deno test --check --unstable --allow-read --allow-write --allow-env --allow-ffi --watch test/",
+  },
+  "imports": {
   }
 }
