--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "test":       "deno test --check --unstable --allow-read --allow-write --allow-env --allow-ffi         test/",
-    "test:watch": "deno test --check --unstable --allow-read --allow-write --allow-env --allow-ffi --watch test/",
+    "test":       "deno test --check --unstable --allow-read --allow-write --allow-env --allow-ffi --allow-run=ffprobe,ffmpeg         test/",
+    "test:watch": "deno test --check --unstable --allow-read --allow-write --allow-env --allow-ffi --allow-run=ffprobe,ffmpeg --watch test/",
   },
   "imports": {
   }
