--- a/deno.json
+++ b/deno.json
@@ -1,16 +1,18 @@
 {
   "tasks": {
-    "test":       "deno test --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net --import-map=test/import_map.json test",
-    "test:watch": "deno test --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net  --watch"
+    "test":       "deno test --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net test",
+    "test:watch": "deno test --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net --watch"
   },
 
   "imports": {
-    "forager": "./src/mod.ts",
+    "@std/path": "jsr:@std/path@0.225.2",
+    "zod": "npm:zod@3.23.8",
 
     "torm": "jsr:@andykais/torm@1.3.2/drivers/sqlite",
     // uncomment for testing
     "torm": "/home/andrew/Code/development/torm/drivers/sqlite.ts",
-    "zod": "npm:zod@3.23.8",
     "~/": "./src/",
+    // used by the test suite
+    "forager": "./src/mod.ts",
   }
 }
