--- a/deno.json
+++ b/deno.json
@@ -6,6 +6,7 @@
 
   "imports": {
     "@std/path": "jsr:@std/path@0.225.2",
+    "@std/fs": "jsr:@std/fs@0.229.3",
     "zod": "npm:zod@3.23.8",
 
     "torm": "jsr:@andykais/torm@1.3.2/drivers/sqlite",
