--- a/deno.json
+++ b/deno.json
@@ -8,10 +8,12 @@
     "@std/path": "jsr:@std/path@0.225.2",
     "@std/fs": "jsr:@std/fs@0.229.3",
     "zod": "npm:zod@3.23.8",
+    "ts-pattern": "npm:ts-pattern@5.2.0",
 
     "torm": "jsr:@andykais/torm@1.3.2/drivers/sqlite",
     // uncomment for testing
     "torm": "/home/andrew/Code/development/torm/drivers/sqlite.ts",
+    "torm/": "/home/andrew/Code/development/torm/src/",
     "~/": "./src/",
     // used by the test suite
     "forager": "./src/mod.ts",
