--- a/deno.json
+++ b/deno.json
@@ -12,8 +12,11 @@
 
     "torm": "jsr:@andykais/torm@1.3.2/drivers/sqlite",
     // uncomment for testing
-    "torm": "/home/andrew/Code/development/torm/drivers/sqlite.ts",
-    "torm/": "/home/andrew/Code/development/torm/src/",
+    // "torm": "/Users/andrew.kaiser/Code/andykais/torm/drivers/sqlite.ts",
+    // "torm/": "/Users/andrew.kaiser/Code/andykais/torm/src/",
+
+    "torm": "https://raw.githubusercontent.com/andykais/torm/af4e612b85c6cffac3faaf5c3d63018002f8e76c/drivers/sqlite.ts",
+    "torm/": "https://raw.githubusercontent.com/andykais/torm/af4e612b85c6cffac3faaf5c3d63018002f8e76c/src/",
     "~/": "./src/",
     // used by the test suite
     "forager": "./src/mod.ts",
