--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
   "imports": {
     "@std/path": "jsr:@std/path@0.225.2",
     "@std/fs": "jsr:@std/fs@0.229.3",
+    "@std/media-types": "jsr:@std/media-types@0.224.0",
     "zod": "npm:zod@3.23.8",
     "ts-pattern": "npm:ts-pattern@5.2.0",
 
