--- a/deno.json
+++ b/deno.json
@@ -8,6 +8,7 @@
     "@std/path": "jsr:@std/path@1.0.0",
     "@std/fs": "jsr:@std/fs@0.229.3",
     "@std/media-types": "jsr:@std/media-types@0.224.0",
+    "@std/fmt": "jsr:@std/fmt@0.225.6",
     "zod": "npm:zod@3.23.8",
     "ts-pattern": "npm:ts-pattern@5.2.0",
 
