--- a/deno.json
+++ b/deno.json
@@ -12,13 +12,7 @@
     "zod": "npm:zod@3.23.8",
     "ts-pattern": "npm:ts-pattern@5.2.0",
 
-    "torm": "jsr:@andykais/torm@1.3.2/drivers/sqlite",
-    // uncomment for testing
-    // "torm": "/home/andrew/Code/development/torm/drivers/sqlite.ts",
-    // "torm/": "/home/andrew/Code/development/torm/src/",
-
-    "torm": "https://raw.githubusercontent.com/andykais/torm/96807fac75f5a993d66d2c026b25d220e2c984ec/drivers/sqlite.ts",
-    "torm/": "https://raw.githubusercontent.com/andykais/torm/96807fac75f5a993d66d2c026b25d220e2c984ec/src/",
+    "@torm/sqlite": "jsr:@torm/sqlite@1.4.1",
     "~/": "./src/",
     // used by the test suite
     "forager": "./src/mod.ts",
