first attempt at monorepo

--- a/packages/core/deno.json
+++ b/packages/core/deno.json
@@ -19,5 +19,9 @@
     "~/": "./src/",
     // used by the test suite
     "forager": "./src/mod.ts",
+  },
+
+  "exports": {
+    ".": "./src/mod.ts"
   }
 }
