--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,11 @@
 {
   "workspace": [
     "./packages/core",
-  ]
+  ],
+
+  "imports": {
+    "@std/path": "jsr:@std/path@1.0.0",
+    "@std/fs": "jsr:@std/fs@0.229.3",
+    "@std/media-types": "jsr:@std/media-types@0.224.0",
+  }
 }
