--- a/packages/cli/deno.json
+++ b/packages/cli/deno.json
@@ -1,4 +1,12 @@
 {
   "name": "@forager/cli",
   "version": "0.0.0",
+
+  "tasks": {
+    "install":    "deno install --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net --name forager src/mod.ts",
+    "test":       "deno test --check --allow-run=deno --allow-write --allow-read --trace-leaks test",
+    "test:watch": "deno test --check --allow-run=deno --allow-write --allow-read --trace-leaks --watch src"
+  },
+
+  "exports": "./src/mod.ts"
 }
