--- a/monorepo/deno.json
+++ b/monorepo/deno.json
@@ -6,10 +6,10 @@
   ],
 
   "imports": {
+    "@std/fs": "jsr:@std/fs@^1.0.1",
+    "@std/path": "jsr:@std/path@^1.0.2",
     "@andykais/ts-rpc": "jsr:@andykais/ts-rpc@^0.1.1",
-    "@std/fs": "jsr:@std/fs@0.229.3",
     "@std/media-types": "jsr:@std/media-types@0.224.0",
-    "@std/path": "jsr:@std/path@1.0.0",
     "forager-test": "./lib/test/lib/util.ts"
   }
 }
