server can import forager/core, browser can import rpc/client

--- a/web/deno.json
+++ b/web/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "d:develop": "deno run -A --unstable-ffi npm:vite build"
-    "d:build":   "deno run -A --unstable-ffi npm:vite dev"
+    "d:develop": "deno run -A --unstable-ffi npm:vite dev"
+    "d:build":   "deno run -A --unstable-ffi npm:vite build"
     "d:preview": "deno run --config=build/deno.json -A --unstable-ffi build/mod.ts"
   },
   "imports": {
