--- a/monorepo/packages/cli/deno.json
+++ b/monorepo/packages/cli/deno.json
@@ -4,13 +4,14 @@
 
   "tasks": {
     "install": "deno install --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net --name forager src/mod.ts",
-    "test": "deno test --check --allow-run=deno --allow-write --allow-read --trace-leaks test",
-    "test:watch": "deno test --check --allow-run=deno --allow-write --allow-read --trace-leaks --watch src"
+    "test":       "deno test --check --allow-run=deno --allow-write --allow-read --allow-ffi --trace-leaks --unstable-ffi --allow-env test",
+    "test:watch": "deno test --check --allow-run=deno --allow-write --allow-read --allow-ffi --trace-leaks --unstable-ffi --allow-env --watch src"
   },
 
   "imports": {
     "@cliffy/command": "jsr:@cliffy/command@1.0.0-rc.4",
     "@std/cli": "jsr:@std/cli@^1.0.2",
+    "@std/yaml": "jsr:@std/yaml@^1.0.3",
     "zod": "npm:zod@^3.23.8"
   },
 
