--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -10,6 +10,7 @@ on:
     branches: ["main"]
 env:
   DENO_DIR: deno_dependency_cache
+  DENO_LOCKFILE: ${{ github.workspace }}/monorepo/deno.lock
 
 defaults:
   run:
@@ -43,7 +44,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ env.DENO_DIR }}
-          key: ${{ hashFiles('../../deno.lock') }}
+          key: ${{ hashFiles($DENO_LOCKFILE) }}
 
       # - name: Lint
       # lint source code & jsr publish requirements. Currently disabled because we should get jsr published before addressing
