--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -14,7 +14,7 @@ env:
 
 defaults:
   run:
-    working-directory: './packages/core/'
+    working-directory: './monorepo/packages/core/'
 
 
 jobs:
