--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,12 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.20",
 		"esbuild": "^0.23.0",
+		"postcss": "^8.4.41",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.10",
 		"typescript": "^5.0.0",
 		"typescript-svelte-plugin": "^0.3.40",
 		"vite": "^5.0.3"
