--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,8 @@
 	"private": true,
 	"scripts": {
 		"develop": "deno run -A --unstable-ffi --check npm:vite dev",
+		"build": "deno run -A --unstable-ffi --check npm:vite build",
+		"preview": "deno run --config=build/deno.json -A --unstable-ffi --check build/mod.ts",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
