--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -83,4 +83,5 @@ jobs:
 
       - name: Publish package
         if: github.ref == 'refs/heads/main'
-        run: cd build && deno publish
+        working-directory: ${{ github.workspace }}/web/build
+        run: deno publish
