refactor(core): make Logger class reusable across packages

--- a/monorepo/packages/core/deno.json
+++ b/monorepo/packages/core/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@forager/core",
-  "version": "0.2.1",
+  "version": "0.2.2",
 
   "tasks": {
     "test":       "deno test --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net=github.com,objects.githubusercontent.com --trace-leaks test",
@@ -22,6 +22,7 @@
   },
 
   "exports": {
-    ".": "./src/mod.ts"
+    ".": "./src/mod.ts",
+    "./logger": "./src/lib/logger.ts",
   }
 }
