--- a/monorepo/packages/cli/deno.json
+++ b/monorepo/packages/cli/deno.json
@@ -1,16 +1,17 @@
 {
   "name": "@forager/cli",
-  "version": "0.3.2",
+  "version": "0.4.0",
 
   "tasks": {
-    "install":    "deno install --global --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net --name forager-cli --force src/cli.ts",
-    "develop":    "deno run --check --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-ffi --unstable-ffi --allow-net=github.com,objects.githubusercontent.com --allow-env src/cli.ts",
-    "test":       "deno test --check --allow-run=deno --allow-write --allow-read --allow-ffi --trace-leaks --unstable-ffi --allow-net=github.com,objects.githubusercontent.com --allow-env test",
+    "install": "deno install --global --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net --name forager-cli --force src/cli.ts",
+    "develop": "deno run --check --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-ffi --unstable-ffi --allow-net=github.com,objects.githubusercontent.com,0.0.0.0,jsr.io --allow-env src/cli.ts",
+    "test": "deno test --check --allow-run=deno --allow-write --allow-read --allow-ffi --trace-leaks --unstable-ffi --allow-net=github.com,objects.githubusercontent.com --allow-env test",
     "test:watch": "deno test --check --allow-run=deno --allow-write --allow-read --allow-ffi --trace-leaks --unstable-ffi --allow-net=github.com,objects.githubusercontent.com --allow-env --watch src"
   },
 
   "imports": {
     "@cliffy/command": "jsr:@cliffy/command@1.0.0-rc.4",
+    "@forager/web": "jsr:@forager/web@^0.0.4",
     "@std/cli": "jsr:@std/cli@^1.0.2",
     "@std/yaml": "jsr:@std/yaml@^1.0.3",
     "zod": "npm:zod@^3.23.8"
