--- a/monorepo/packages/core/deno.json
+++ b/monorepo/packages/core/deno.json
@@ -1,28 +1,27 @@
 {
   "name": "@forager/core",
-  "version": "0.2.2",
+  "version": "0.2.3",
 
   "tasks": {
-    "test":       "deno test --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net=github.com,objects.githubusercontent.com --trace-leaks test",
+    "test": "deno test --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net=github.com,objects.githubusercontent.com --trace-leaks test",
     "test:watch": "deno test --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net=github.com,objects.githubusercontent.com --trace-leaks --watch"
   },
 
   "imports": {
-    "@std/path": "jsr:@std/path@1.0.0",
-    "@std/fs": "jsr:@std/fs@0.229.3",
-    "@std/media-types": "jsr:@std/media-types@0.224.0",
     "@std/fmt": "jsr:@std/fmt@0.225.6",
-    "zod": "npm:zod@3.23.8",
-    "ts-pattern": "npm:ts-pattern@5.2.0",
-
+    "@std/fs": "jsr:@std/fs@0.229.3",
+    "@std/log": "jsr:@std/log@^0.224.6",
+    "@std/media-types": "jsr:@std/media-types@0.224.0",
+    "@std/path": "jsr:@std/path@1.0.0",
     "@torm/sqlite": "jsr:@torm/sqlite@1.4.1",
-    "~/": "./src/",
-    // used by the test suite
     "forager": "./src/mod.ts",
+    "ts-pattern": "npm:ts-pattern@5.2.0",
+    "zod": "npm:zod@3.23.8",
+    "~/": "./src/"
   },
 
   "exports": {
     ".": "./src/mod.ts",
-    "./logger": "./src/lib/logger.ts",
+    "./logger": "./src/lib/logger.ts"
   }
 }
