fix(web): deno publish

--- a/web/adapter/lib/deno.json
+++ b/web/adapter/lib/deno.json
@@ -21,8 +21,9 @@
       "README.md",
       "LICENSE",
       "mod.ts",
+      "server.js",
       "static/**/*",
-      "server.js"
+      "server/**/*"
     ]
   }
 }
