--- a/web/adapter/lib/deno.json
+++ b/web/adapter/lib/deno.json
@@ -11,7 +11,8 @@
     "@std/yaml": "jsr:@std/yaml@^1.0.4",
     "cookie": "npm:cookie@^0.6.0",
     "devalue": "npm:devalue@^5.0.0",
-    "set-cookie-parser": "npm:set-cookie-parser@^2.7.0"
+    "set-cookie-parser": "npm:set-cookie-parser@^2.7.0",
+    "zod": "npm:zod@^3.23.8"
   },
 
   "exports": "./mod.ts",
