--- a/web/package.json
+++ b/web/package.json
@@ -11,22 +11,23 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "2.5.25",
-		"@sveltejs/vite-plugin-svelte": "3.1.2",
+		"@sveltejs/kit": "2.5.28",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
 		"autoprefixer": "10.4.20",
 		"esbuild": "0.23.1",
 		"postcss": "8.4.45",
-		"svelte": "5.0.0-next.243",
-		"svelte-check": "4.0.1",
+		"svelte": "5.0.0-next.251",
+		"svelte-check": "4.0.2",
 		"tailwindcss": "3.4.10",
 		"typescript": "^5.0.0",
-		"typescript-svelte-plugin": "^0.3.40",
-		"vite": "5.4.3"
+		"typescript-svelte-plugin": "0.3.41",
+		"vite": "5.4.6"
 	},
 	"type": "module",
 	"dependencies": {
-		"@andykais/ts-rpc": "npm:@jsr/andykais__ts-rpc@^0.2.2",
-		"@forager/core": "npm:@jsr/forager__core@^0.4.2",
-		"@std/yaml": "npm:@jsr/std__yaml@^1.0.4"
+		"@andykais/ts-rpc": "npm:@jsr/andykais__ts-rpc@0.2.2",
+		"@forager/core": "npm:@jsr/forager__core@0.5.0",
+		"@std/yaml": "npm:@jsr/std__yaml@1.0.4",
+		"zod": "3.23.8"
 	}
 }
