fix(web): deno publish allow slow types

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -85,5 +85,5 @@ jobs:
 
       - name: Publish package
         if: github.ref == 'refs/heads/main'
-        run: deno publish
+        run: deno publish --allow-slow-types
         working-directory: ./web/build
