--- a/monorepo/packages/core/deno.json
+++ b/monorepo/packages/core/deno.json
@@ -1,8 +1,9 @@
 {
   "name": "@forager/core",
-  "version": "0.5.0",
+  "version": "0.6.0",
 
   "tasks": {
+    "lint": "deno lint",
     "test": "deno test --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net=github.com,objects.githubusercontent.com --trace-leaks test",
     "test:watch": "deno test --allow-run=ffprobe,ffmpeg --unstable-ffi --check --allow-read --allow-write --allow-ffi --allow-env=HOME,DENO_DIR,XDG_CACHE_HOME --allow-net=github.com,objects.githubusercontent.com --trace-leaks --watch"
   },
@@ -23,5 +24,18 @@
   "exports": {
     ".": "./src/mod.ts",
     "./logger": "./src/lib/logger.ts"
+  },
+
+  "lint": {
+    "include": [
+      "./src/",
+      "./test/"
+    ],
+    "rules": {
+      "tags": [],
+      "include": [
+        "no-unused-vars"
+      ]
+    }
   }
 }
