--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -14,7 +14,9 @@
       "name": "typescript-svelte-plugin",
       "enabled": true,
       "assumeIsSvelteProject": true
-    }]
+    }],
+
+    "allowImportingTsExtensions": true
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	// except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
