--- a/monorepo/packages/cli/deno.json
+++ b/monorepo/packages/cli/deno.json
@@ -12,7 +12,7 @@
 
   "imports": {
     "@cliffy/command": "jsr:@cliffy/command@1.0.0-rc.4",
-    "@forager/web": "jsr:@forager/web@^0.0.10",
+    "@forager/web": "jsr:@forager/web@^0.0.12",
     "@std/cli": "jsr:@std/cli@^1.0.2",
     "@std/yaml": "jsr:@std/yaml@^1.0.3",
     "zod": "npm:zod@^3.23.8"
@@ -20,5 +20,7 @@
 
   "exports": "./src/cli.ts",
 
-  "license": "MIT"
+  "license": "MIT",
+
+  "vendor": true
 }
