--- a/web/package.json
+++ b/web/package.json
@@ -11,18 +11,18 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "2.5.28",
-		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
+		"@sveltejs/kit": "2.7.3",
+		"@sveltejs/vite-plugin-svelte": "4.0.0",
 		"@types/deno": "^2.0.0",
 		"autoprefixer": "10.4.20",
-		"esbuild": "0.23.1",
-		"postcss": "8.4.45",
-		"svelte": "5.0.0-next.251",
-		"svelte-check": "4.0.2",
+		"esbuild": "0.24.0",
+		"postcss": "8.4.47",
+		"svelte": "5.1.3",
+		"svelte-check": "4.0.5",
 		"tailwindcss": "3.4.10",
 		"typescript": "^5.0.0",
-		"typescript-svelte-plugin": "0.3.41",
-		"vite": "5.4.6"
+		"typescript-svelte-plugin": "0.3.42",
+		"vite": "5.4.10"
 	},
 	"type": "module",
 	"dependencies": {
