--- a/monorepo/packages/core/deno.json
+++ b/monorepo/packages/core/deno.json
@@ -14,7 +14,7 @@
     "@std/log": "jsr:@std/log@^0.224.6",
     "@std/media-types": "jsr:@std/media-types@0.224.0",
     "@std/path": "jsr:@std/path@1.0.0",
-    "@torm/sqlite": "jsr:@torm/sqlite@1.4.1",
+    "@torm/sqlite": "jsr:@torm/sqlite@^1.6.0",
     "forager": "./src/mod.ts",
     "ts-pattern": "npm:ts-pattern@5.2.0",
     "zod": "npm:zod@3.23.8",
