--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
+		"typescript-svelte-plugin": "^0.3.45",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
