--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -9,15 +9,15 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler"
+		"moduleResolution": "bundler",
 
-    // ,"plugins": [{
-    //   "name": "typescript-svelte-plugin",
-    //   "enabled": true,
-    //   "assumeIsSvelteProject": true
-    // }],
+    "plugins": [{
+      "name": "typescript-svelte-plugin",
+      "enabled": true,
+      "assumeIsSvelteProject": true
+    }],
 
-    // "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true
 	}
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
