--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -21,7 +21,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-13, windows-latest]
 
     runs-on: ${{ matrix.os }}
 
