--- a/web/package.json
+++ b/web/package.json
@@ -12,17 +12,16 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@deno/vite-plugin": "^1.0.4",
-		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/vite": "^4.0.0",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
-		"typescript-svelte-plugin": "^0.3.45",
-		"vite": "^6.0.0"
+		"@deno/vite-plugin": "~1.0.4",
+		"@sveltejs/kit": "~2.20.1",
+		"@sveltejs/vite-plugin-svelte": "~5.0.3",
+		"@tailwindcss/vite": "~4.0.14",
+		"svelte": "~5.23.2",
+		"svelte-check": "~4.1.5",
+		"tailwindcss": "~4.0.14",
+		"typescript": "~5.0.0",
+		"typescript-svelte-plugin": "~0.3.46",
+		"vite": "~6.2.2"
 	},
 	"dependencies": {
 		"@andykais/ts-rpc": "npm:@jsr/andykais__ts-rpc@^0.2.2",
