impl(core): add field MediaFile::framecount

--- a/monorepo/packages/core/deno.json
+++ b/monorepo/packages/core/deno.json
@@ -5,7 +5,7 @@
   "tasks": {
     "lint": "deno lint",
     "test":       "deno test --allow-run=ffprobe,ffmpeg --check --allow-read --allow-write --trace-leaks test",
-    "test:watch": "deno test --allow-run=ffprobe,ffmpeg --check --allow-read --allow-write --trace-leaks --watch",
+    "test:watch": "deno test --allow-run=ffprobe,ffmpeg --check --allow-read --allow-write --trace-leaks --fail-fast --watch",
     "docs:preview": "deno doc --html ./src/mod.ts && deno run --allow-read=. --allow-net=0.0.0.0:8000 jsr:@std/http/file-server docs",
   },
 
