--- a/web/adapter/lib/deno.json
+++ b/web/adapter/lib/deno.json
@@ -5,10 +5,12 @@
 
   "imports": {
     "@andykais/ts-rpc": "jsr:@andykais/ts-rpc@^0.2.2",
-    "@forager/core": "jsr:@forager/core@^0.6.0",
+    "@forager/core": "jsr:@forager/core@^0.7.9",
     "@std/http/file-server": "jsr:@std/http@0.224.5/file-server",
     "@std/path": "jsr:@std/path@^1.0.3",
     "@std/yaml": "jsr:@std/yaml@^1.0.4",
+    "svelte": "npm:svelte@~5.23.2",
+    "clsx": "npm:clsx@~2.1.1",
     "cookie": "npm:cookie@^0.6.0",
     "devalue": "npm:devalue@^5.0.0",
     "set-cookie-parser": "npm:set-cookie-parser@^2.7.0",
