--- a/web/package.json
+++ b/web/package.json
@@ -25,10 +25,11 @@
 	},
 	"dependencies": {
 		"@andykais/ts-rpc": "npm:@jsr/andykais__ts-rpc@^0.2.2",
-		"@forager/core": "npm:@jsr/forager__core@^0.7.10",
+		"@forager/core": "npm:@jsr/forager__core@^0.7.12",
 		"@std/datetime": "npm:@jsr/std__datetime@^0.225.3",
 		"@std/path": "npm:@jsr/std__path@^1.0.8",
 		"@std/yaml": "npm:@jsr/std__yaml@^1.0.5",
+		"esbuild": "^0.25.2",
 		"zod": "^3.24.2"
 	}
 }
