--- a/monorepo/deno.json
+++ b/monorepo/deno.json
@@ -1,14 +1,22 @@
 {
   "workspace": [
     "./packages/core",
-    "./packages/cli",
+    "./packages/web"
   ],
 
+  "nodeModulesDir": "auto",
+
   "imports": {
-    "@std/fs": "jsr:@std/fs@^1.0.1",
-    "@std/path": "jsr:@std/path@^1.0.2",
-    "@andykais/ts-rpc": "jsr:@andykais/ts-rpc@^0.1.1",
+    "@std/fmt": "jsr:@std/fmt@0.225.6",
+    "@std/fs": "jsr:@std/fs@0.229.3",
+    "@std/log": "jsr:@std/log@^0.224.6",
     "@std/media-types": "jsr:@std/media-types@0.224.0",
+    "@std/path": "jsr:@std/path@1.0.0",
+    "forager": "./src/mod.ts",
+    "ts-pattern": "npm:ts-pattern@5.2.0",
+    "@torm/sqlite": "jsr:@torm/sqlite@^1.9.7",
+    "zod": "npm:zod@^3.24.2",
+
     "forager-test": "./lib/test/lib/util.ts"
   }
 }
