--- a/monorepo/packages/core/deno.json
+++ b/monorepo/packages/core/deno.json
@@ -6,19 +6,10 @@
     "lint": "deno lint",
     "test":       "deno test --allow-run=ffprobe,ffmpeg --check --allow-read --allow-write --trace-leaks test",
     "test:watch": "deno test --allow-run=ffprobe,ffmpeg --check --allow-read --allow-write --trace-leaks --fail-fast --watch",
-    "docs:preview": "deno doc --html ./src/mod.ts && deno run --allow-read=. --allow-net=0.0.0.0:8000 jsr:@std/http/file-server docs",
+    "docs:preview": "deno doc --html ./src/mod.ts && deno run --allow-read=. --allow-net=0.0.0.0:8000 jsr:@std/http/file-server docs"
   },
 
   "imports": {
-    "@std/fmt": "jsr:@std/fmt@0.225.6",
-    "@std/fs": "jsr:@std/fs@0.229.3",
-    "@std/log": "jsr:@std/log@^0.224.6",
-    "@std/media-types": "jsr:@std/media-types@0.224.0",
-    "@std/path": "jsr:@std/path@1.0.0",
-    "@torm/sqlite": "jsr:@torm/sqlite@^1.9.7",
-    "forager": "./src/mod.ts",
-    "ts-pattern": "npm:ts-pattern@5.2.0",
-    "zod": "npm:zod@^3.24.2",
     "~/": "./src/"
   },
 
