--- a/monorepo/packages/web/package.json
+++ b/monorepo/packages/web/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "web",
+	"name": "@forager/web",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "cd build && deno run --allow-env=FORAGER_CONFIG --allow-read --allow-write --allow-net=0.0.0.0:8000 mod.ts",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
