--- a/monorepo/deno.json
+++ b/monorepo/deno.json
@@ -1,12 +1,14 @@
 {
   "workspace": [
     "./packages/core",
-    "./packages/web"
+    "./packages/web",
   ],
 
   "nodeModulesDir": "auto",
 
   "imports": {
+    "@std/datetime": "jsr:@std/datetime@^0.225.3",
+    "@std/yaml": "jsr:@std/yaml@^1.0.5",
     "@std/fmt": "jsr:@std/fmt@0.225.6",
     "@std/fs": "jsr:@std/fs@0.229.3",
     "@std/log": "jsr:@std/log@^0.224.6",
