--- a/monorepo/packages/web/package.json
+++ b/monorepo/packages/web/package.json
@@ -12,11 +12,12 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"dependencies": {
-    "@torm/sqlite": "npm:@jsr/torm__sqlite@^1.9.7"
+    "@andykais/ts-rpc": "npm:@jsr/andykais__ts-rpc@^0.2.2",
+    "@torm/sqlite": "npm:@jsr/torm__sqlite@^1.9.7",
+    "@opentelemetry/api": "1.9.0"
 	},
 	"devDependencies": {
     "@deno/vite-plugin": "1.0.5",
-		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
