--- a/monorepo/packages/web/package.json
+++ b/monorepo/packages/web/package.json
@@ -18,13 +18,14 @@
 	},
 	"devDependencies": {
     "@deno/vite-plugin": "1.0.5",
-		"@sveltejs/kit": "^2.22.0",
-		"@sveltejs/vite-plugin-svelte": "^6.0.0",
-		"@tailwindcss/vite": "^4.0.0",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^7.0.4"
+		"@sveltejs/kit": "2.22.0",
+		"@sveltejs/vite-plugin-svelte": "6.0.0",
+		"@tailwindcss/vite": "4.0.14",
+		"svelte": "5.23.2",
+		"svelte-check": "4.1.5",
+		"tailwindcss": "4.0.14",
+		"typescript": "5.9.2",
+		"vite": "7.0.4",
+		"typescript-svelte-plugin": "0.3.50"
 	}
 }
