--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -10,11 +10,11 @@ on:
     branches: ["main"]
 env:
   DENO_DIR: deno_dependency_cache
-  DENO_LOCKFILE: ${{ github.workspace }}/web/deno.lock
+  DENO_LOCKFILE: ${{ github.workspace }}/packages/web/deno.lock
 
 defaults:
   run:
-    working-directory: ./web
+    working-directory: ./packages/web
 
 
 jobs:
