working forager/web build workspace in packages/web/adapter

--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "workspace": [
     "./packages/core",
     "./packages/web",
+    "./packages/web/adapter/lib",
   ],
 
   "nodeModulesDir": "auto",
