--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -10,7 +10,7 @@ on:
     branches: ["main"]
 env:
   DENO_DIR: deno_dependency_cache
-  DENO_LOCKFILE: ${{ github.workspace }}/packages/web/deno.lock
+  DENO_LOCKFILE: ${{ github.workspace }}/deno.lock
 
 defaults:
   run:
