sigh, another attempt

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -8,9 +8,9 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-env:
-  DENO_DIR: deno_dependency_cache
-  DENO_LOCKFILE: ${{ github.workspace }}/deno.lock
+# env:
+#   DENO_DIR: deno_dependency_cache
+#   DENO_LOCKFILE: ${{ github.workspace }}/deno.lock
 
 defaults:
   run:
