--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -74,9 +74,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Deno
-        uses: denoland/setup-deno@v1
+        uses: denoland/setup-deno@v2
         with:
-          deno-version: v1.x
+          deno-version: canary
+
 
       # - name: Cache Deno dependencies 
       #   uses: actions/cache@v4
