--- a/packages/cli/deno.json
+++ b/packages/cli/deno.json
@@ -4,7 +4,7 @@
 
   "tasks": {
     "install": "deno install --global --allow-run=ffprobe,ffmpeg --check --allow-read --allow-write --allow-env=HOME --name forager-cli --force src/cli.ts",
-    "develop": "deno run --check --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-net=jsr.io --allow-env=HOME src/cli.ts",
+    "develop": "deno run --check --unstable-raw-imports --allow-run=ffprobe,ffmpeg --allow-write --allow-read --allow-env=HOME src/cli.ts",
     "develop:watch": "deno run --watch --check --allow-run=ffprobe,ffmpeg --allow-write --allow-read src/cli.ts",
     "test": "deno test --check --allow-run=deno --allow-write --allow-read --allow-env --trace-leaks test",
     "test:watch": "deno test --check --allow-run=deno --allow-write --allow-read --allow-env --trace-leaks --watch src"
@@ -12,7 +12,6 @@
 
   "imports": {
     "@cliffy/command": "jsr:@cliffy/command@1.0.0-rc.4",
-    "@forager/web": "jsr:@forager/web@^0.0.12",
     "@std/cli": "jsr:@std/cli@^1.0.2",
     "@std/yaml": "jsr:@std/yaml@^1.0.3",
     "zod": "npm:zod@^3.24.2"
