--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"build:local": "LOCAL_BUILD=true vite build",
 		"preview": "cd build && deno run --allow-env=FORAGER_CONFIG --allow-read --allow-write --allow-net=0.0.0.0:8000 mod.ts",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
